# mynewrepository

./: note.txt  note2.txt  note3.txt  note4.txt
aaaa/: hello
assignment/assignment3/MSER/: readme.txt  test.cpp
assignment/assignment3/MSER1/: CMakeLists.txt  RGBvalue.cpp  RGBvalue.hpp  test.cpp
assignment/assignment3/classifier/: classifier.hpp  main.cpp  readme.txt
homework1/assignment_liyamei/openvideoassinment/: main.cpp
homework1/openvideoassinment/: timer.h
l2/: main.cpp
learn1/111/: CMakeLists.txt  main.cpp
learn1/aaaa/: CMakeLists.txt
learning/: n.txt
learning/MSER/: CMakeLists.txt  RGBvalue.cpp  RGBvalue.hpp  armor.cpp  compareGRAY.hpp  finaltest.cpp  main.cpp  modify.cpp  modify2.cpp  zimiao.txt
learning/bolbundROI/: CMakeLists.txt  calibdata.txt  v03_Cameracalib.cpp
learning/classifier/: CMakeLists.txt  classifier.hpp
learning/compileerror/: CMakeLists.txt  main.cpp
learning/l1/: CMakeLists.txt
learning/l1/aaaa/: CMakeLists.txt  main.cpp
learning/l2/: main.cpp
learning/l3/l2/: main.cpp
learning/l3/opencv/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cv  cv.cpp
learning/l4/: CMakeLists.txt  main.cpp  readme.txt  timer.cpp  timer.h
learning/l5/: CMakeLists.txt  main.cpp
learning/l6/: CMakeLists.txt  main.cpp
learning/l8/: main.cpp
learning/l9/: CMakeLists.txt  main.cpp
learning/l9/Camera Roll/: jiaozheng.m
opencv_test/: test  test.cpp
